build-tests/tests/fail/net_without_tcp_missing_tcp.rs
use build_tests::tokio_net::tcp;

fn main() {}

